--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 	
 </head>
 <body>
+
 <nav>
 	<ul id="navigate">
 		<li>
 			<a href="/#"><img width="20" alt="Spotify" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Spotify.svg/256px-Spotify.svg.png"/></a>
 		</li>	
 		<li> Spotify Challenge </li>
-		<!-- <li id = "login"> Login </li> -->
 	</ul>
 </nav>
 	<!-- Initiate app -->
@@ -36,27 +36,32 @@
 			<div class = "row">
 				<div class = "form-horizontal col-sm-6 col-md-6">
 					<div class="form-group" id ="searched">
-						<input name="search" placeholder="What u feelin..." ng-model="playlist" class="form-control"></input>
+						<input name="search" placeholder="What kind of music u feelin..." ng-model="playlist" class="form-control"></input>
 					</div>
 				</div>
 			</div>
-			<div class="form-group">
+			<div class="form-group" id="songButton">
 				<button ng-disabled="playlistForm.search.$invalid" class="btn btn-primary" ng-click="getPlaylist()" type="submit">Submit</button>
 			</div>
 		</form>
 		<!-- Results -->
 		<div class="container-fixed">
 			<div class="help-block">
-				<span ng-show="playlists.length>0">Click to sample</span>
+				<span ng-show="songlists.length>0">Click to sample</span>
 				<span ng-show="currentSong && !audioObject.paused">(playing)</span>
 			</div>			
-			<ul>
-				<li ng-repeat="playlist in playlists" class="" ng-click="songlist()" title="{{playlists.name}}">{{playlist.name}}</li>
-			</ul>
-			<ul>
-				<li ng-repeat=" songlist in songlists" class ="" title="{{songlists.name}}">{{songlist.name}}</li>
-			</ul>
+			<ul id = "albumList">
+				<li ng-repeat="album in albums" class="" ng-click="getSonglist(album.href)" title="{{albums.name}}">{{album.name}}</li>
+			</ul>			
 		</div>
-	</div>
+		<div class="container-fixed">
+			<div class="help-block">	
+			<ul>
+				<li id="songType" ng-repeat="songlist in songlists" ng-click="play(songlist.preview_url)" class ="" title="{{songlists.name}}">{{songlist.name}}</li>
+			</ul>
+
+		</div>
+			</div>
+		</div>
 </body>
 </html>
